// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / Number Default 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c8 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c8:active:enabled {
  background-color: #0046FF;
}

.c8:active:enabled svg {
  fill: #FFFFFF;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
      
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <input
          className="c7"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step={1}
          type="number"
          value="1"
        />
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            decrease number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M24 11v2H0v-2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            increase number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number Disabled 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c8 {
  width: 40px;
  background-color: #EBEBE8;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c8:active:enabled {
  background-color: #0046FF;
}

.c8:active:enabled svg {
  fill: #FFFFFF;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #EBEBE8;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
      
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <input
          className="c7"
          disabled={true}
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step="0.25"
          type="number"
          value="152.25"
        />
        <button
          className="c8"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            decrease number by 
            0.25
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M24 11v2H0v-2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          className="c8"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            increase number by 
            0.25
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number Required 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c8 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c8:active:enabled {
  background-color: #0046FF;
}

.c8:active:enabled svg {
  fill: #FFFFFF;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
       *
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <input
          className="c7"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          required={true}
          step={1}
          type="number"
          value="91"
        />
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            decrease number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M24 11v2H0v-2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            increase number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With a smaller step 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c8 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c8:active:enabled {
  background-color: #0046FF;
}

.c8:active:enabled svg {
  fill: #FFFFFF;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
      
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <input
          className="c7"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step="0.005"
          type="number"
          value="15.200"
        />
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            decrease number by 
            0.005
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M24 11v2H0v-2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            increase number by 
            0.005
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With all actions 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c8 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c8:active:enabled {
  background-color: #0046FF;
}

.c8:active:enabled svg {
  fill: #FFFFFF;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
      
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <input
          className="c7"
          id="insert-unique-id"
          min={0}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="number"
          value="1"
        />
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            decrease number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M24 11v2H0v-2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            increase number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With auto focus 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c8 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c8:active:enabled {
  background-color: #0046FF;
}

.c8:active:enabled svg {
  fill: #FFFFFF;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
      
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <input
          autoFocus={true}
          className="c7"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step="0.25"
          type="number"
          value="152.25"
        />
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            decrease number by 
            0.25
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M24 11v2H0v-2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            increase number by 
            0.25
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With default value (Uncontrolled behaviour) 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c8 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c8:active:enabled {
  background-color: #0046FF;
}

.c8:active:enabled svg {
  fill: #FFFFFF;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
      
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <input
          className="c7"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step="0.1"
          type="number"
          value="15.2"
        />
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            decrease number by 
            0.1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M24 11v2H0v-2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            increase number by 
            0.1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With error if value is less than 1 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c8 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c8:active:enabled {
  background-color: #0046FF;
}

.c8:active:enabled svg {
  fill: #FFFFFF;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #FF1900;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
      
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <input
          aria-invalid={true}
          className="c7"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step="1"
          type="number"
          value="0"
        />
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            decrease number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M24 11v2H0v-2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            increase number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </span>
  <div>
    <span
      className="c11"
    >
      <div
        className="c9"
      >
        Error: 
      </div>
      Number needs to be greater than 0
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Number With extra info and error 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c8 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c8:active:enabled {
  background-color: #0046FF;
}

.c8:active:enabled svg {
  fill: #FFFFFF;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #FF1900;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
      
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <input
          aria-invalid={true}
          className="c7"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step={1}
          type="number"
          value="0"
        />
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            decrease number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M24 11v2H0v-2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            increase number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </span>
  <div>
    <span
      className="c11"
    >
      <div
        className="c9"
      >
        Error: 
      </div>
      Number needs to be greater than 0
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Number With extra info below 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c8 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c8:active:enabled {
  background-color: #0046FF;
}

.c8:active:enabled svg {
  fill: #FFFFFF;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
      
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <input
          className="c7"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step={1}
          type="number"
          value="1"
        />
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            decrease number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M24 11v2H0v-2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            increase number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </span>
  <div>
    <span
      className="c11"
    >
      Use wisely this space
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Number With hidden label 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c8 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c8:active:enabled {
  background-color: #0046FF;
}

.c8:active:enabled svg {
  fill: #FFFFFF;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={true}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
      
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <input
          className="c7"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step={1}
          type="number"
          value="1"
        />
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            decrease number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M24 11v2H0v-2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            increase number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With max and min 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c8 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c8:active:enabled {
  background-color: #0046FF;
}

.c8:active:enabled svg {
  fill: #FFFFFF;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
      
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <input
          className="c7"
          id="insert-unique-id"
          max="20"
          min="10"
          onChange={[Function]}
          onKeyDown={[Function]}
          step={1}
          type="number"
          value="12"
        />
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            decrease number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M24 11v2H0v-2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            increase number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With no steppers 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
      
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <input
          className="c7"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step={1}
          type="number"
          value="1"
        />
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With size small 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:768px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Size = "s"
    </span>
  </div>,
  .c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c12 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c4 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c13 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c3 {
  width: 200px;
  display: inline-block;
}

.c7 {
  position: relative;
  background-color: #ffffff;
  height: 32px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c11 {
  width: 32px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c11:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c11:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c11:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c11:active:enabled {
  background-color: #0046FF;
}

.c11:active:enabled svg {
  fill: #FFFFFF;
}

.c10 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c10:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c10:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c10::-webkit-outer-spin-button,
.c10::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c10[type='number'] {
  -moz-appearance: textfield;
}

.c14 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #FF1900;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c14:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c14:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c14::-webkit-outer-spin-button,
.c14::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c14[type='number'] {
  -moz-appearance: textfield;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Default
      </div>
      <div>
        <div
          className="c3"
        >
          <label
            className="c4"
            hidden={false}
            htmlFor="insert-unique-id"
          >
            <span
              className="c5"
            >
              Label
              
            </span>
          </label>
          <span
            className="c6"
          >
            <div
              className="c7 c8"
            >
              <div
                className="c9"
              >
                <input
                  className="c10"
                  id="insert-unique-id"
                  min={0}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  step={1}
                  type="number"
                  value="1"
                />
                <button
                  className="c11"
                  onClick={[Function]}
                  size="s"
                  type="button"
                >
                  <div
                    className="c12"
                  >
                    decrease number by 
                    1
                  </div>
                  <svg
                    aria-hidden="true"
                    className="c13"
                    focusable="false"
                    role="presentation"
                    size={3}
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M24 11v2H0v-2z"
                      fillRule="evenodd"
                    />
                  </svg>
                </button>
                <button
                  className="c11"
                  onClick={[Function]}
                  size="s"
                  type="button"
                >
                  <div
                    className="c12"
                  >
                    increase number by 
                    1
                  </div>
                  <svg
                    aria-hidden="true"
                    className="c13"
                    focusable="false"
                    role="presentation"
                    size={3}
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
                      fillRule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        No steppers
      </div>
      <div>
        <div
          className="c3"
        >
          <label
            className="c4"
            hidden={false}
            htmlFor="insert-unique-id"
          >
            <span
              className="c5"
            >
              Label
              
            </span>
          </label>
          <span
            className="c6"
          >
            <div
              className="c7 c8"
            >
              <div
                className="c9"
              >
                <input
                  className="c10"
                  id="insert-unique-id"
                  min={0}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  step={1}
                  type="number"
                  value="1"
                />
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Error
      </div>
      <div>
        <div
          className="c3"
        >
          <label
            className="c4"
            hidden={false}
            htmlFor="insert-unique-id"
          >
            <span
              className="c5"
            >
              Label
              
            </span>
          </label>
          <span
            className="c6"
          >
            <div
              className="c7 c8"
            >
              <div
                className="c9"
              >
                <input
                  aria-invalid={true}
                  className="c14"
                  id="insert-unique-id"
                  min={0}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  step={1}
                  type="number"
                  value="1"
                />
                <button
                  className="c11"
                  onClick={[Function]}
                  size="s"
                  type="button"
                >
                  <div
                    className="c12"
                  >
                    decrease number by 
                    1
                  </div>
                  <svg
                    aria-hidden="true"
                    className="c13"
                    focusable="false"
                    role="presentation"
                    size={3}
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M24 11v2H0v-2z"
                      fillRule="evenodd"
                    />
                  </svg>
                </button>
                <button
                  className="c11"
                  onClick={[Function]}
                  size="s"
                  type="button"
                >
                  <div
                    className="c12"
                  >
                    increase number by 
                    1
                  </div>
                  <svg
                    aria-hidden="true"
                    className="c13"
                    focusable="false"
                    role="presentation"
                    size={3}
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
                      fillRule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </span>
          <div>
            <span
              className="c15"
            >
              <div
                className="c12"
              >
                Error: 
              </div>
              Some error text that will wrap itself over couple of lines
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules | Input / Number With success 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c8 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c8:active:enabled {
  background-color: #0046FF;
}

.c8:active:enabled svg {
  fill: #FFFFFF;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #00D200;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
      
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <input
          className="c7"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step={1}
          success={true}
          type="number"
          value="1"
        />
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            decrease number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M24 11v2H0v-2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            increase number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            role="presentation"
            size={3}
            viewBox="0 0 24 24"
          >
            <path
              d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With value (Controlled behaviour) 1`] = `
Array [
  .c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c8 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c8:active:enabled {
  background-color: #0046FF;
}

.c8:active:enabled svg {
  fill: #FFFFFF;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7[type='number'] {
  -moz-appearance: textfield;
}

<div
    className="c0"
  >
    <label
      className="c1"
      hidden={false}
      htmlFor="insert-unique-id"
    >
      <span
        className="c2"
      >
        Label
        
      </span>
    </label>
    <span
      className="c3"
    >
      <div
        className="c4 c5"
      >
        <div
          className="c6"
        >
          <input
            className="c7"
            id="insert-unique-id"
            min={0}
            onChange={[Function]}
            onKeyDown={[Function]}
            step={1}
            type="number"
            value="10"
          />
          <button
            className="c8"
            onClick={[Function]}
            type="button"
          >
            <div
              className="c9"
            >
              decrease number by 
              1
            </div>
            <svg
              aria-hidden="true"
              className="c10"
              focusable="false"
              role="presentation"
              size={3}
              viewBox="0 0 24 24"
            >
              <path
                d="M24 11v2H0v-2z"
                fillRule="evenodd"
              />
            </svg>
          </button>
          <button
            className="c8"
            onClick={[Function]}
            type="button"
          >
            <div
              className="c9"
            >
              increase number by 
              1
            </div>
            <svg
              aria-hidden="true"
              className="c10"
              focusable="false"
              role="presentation"
              size={3}
              viewBox="0 0 24 24"
            >
              <path
                d="M13 0v11h11v2H13v11h-2V12.999L0 13v-2l11-.001V0h2z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </span>
  </div>,
  <button
    onClick={[Function]}
    type="button"
  >
    Decrease
  </button>,
  <button
    onClick={[Function]}
    type="button"
  >
    Increase
  </button>,
]
`;
